--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>personal portfolio </title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.mim.js"></script>
     <!-- <script href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -15,16 +16,19 @@
 
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#home">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#"></a>Home</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Services</li>
-                <li><a href="#"></a>Skills</li>
-                <li><a href="#"></a>Teams</li>
-                <li><a href="#"></a>Contact</li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -38,7 +42,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Kenny Favour</div>
-                <div class="text-3">And I'm a <span>Blogger</span></div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#" class="">Hire me</a>
             
 
@@ -57,7 +61,7 @@
                     <img src="next.jpg" alt="" class="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Kenny and I'm a <span>Blogger</span></div>
+                    <div class="text">I'm Kenny and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia quis vero beatae inventore accusantium, earum nesciunt eos? Unde voluptate saepe, architecto quod nisi accusamus? Commodi, hic fugit reprehenderit nostrum aspernatur aut dolore nam quos error laborum quod nisi. Quae exercitationem obcaecati laudantium, reiciendis fuga placeat ipsa, officiis quam similique eum veniam dolorum! Inventore repellendus magnam repudiandae dolores alias ab necessitatibus.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -197,6 +201,73 @@
             </div>
         </div>
     </section>
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid impedit nulla provident illum neque natus distinctio dolor repellendus similique. Deserunt.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <!-- <i class="fa fa-user"></i> -->
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Kenny Favour</div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <!-- <i class="fa fa-marker-alt"></i> -->
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Abuja,Nigeria</div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <!-- <i class="fa fa-envelope"></i> -->
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">flamzyk@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subejct" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows ="10" placeholder="Describe project...." requiredss></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created by <a href="#">Agbejule Favour</a> | <span class="far fa-copyright">2021 All rights reserved</span></span>
+    </footer>
 
 
 
